10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:  
  rules:
  - http:
      paths:
      - path: /app1/
        pathType: Prefix
        backend:
          #serviceName: app1-nginx-clusterip-service
          service:
            Name: app1-nginx-clusterip-service
          #servicePort: 80
            Port: 
              Number: 80
      - path: /app2/
        pathType: Prefix
        backend:
          #serviceName: app2-nginx-clusterip-service
          service:
            Name: app2-nginx-clusterip-service
          #servicePort: 80
            Port: 
              Number: 80          
      - path: /
        pathType: Prefix
        backend:
          #serviceName: usermgmt-webapp-clusterip-service
          service:
            Name: usermgmt-webapp-clusterip-service
            Port:
              Number: 80
          #servicePort: 80
